workshop03/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver-ing
  namespace: csns
  annotations:
    nginx.ingress.kubernetes.io/rewrite: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: code-167.172.7.70.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codeserver-svc
                port:
                  number: 8443
